# roust

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  out.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
bgrep-rs/: Cargo.toml  PARITY_NOTES.md
bgrep-rs/src/: cache.rs  core.rs  history.rs  lib.rs  main.rs
bgrep-rs/tests/: incremental.rs
lab/: PREDICTIONS.md  README.md  agentless_metric.py  agentless_metric_full.py  agentless_metric_v4.py  agentless_metric_verified.py  analyze_v5.py  analyze_v6.py  analyze_v7.py  diag_channels.py  diag_stacktrace.py  diag_symbols.py  dogfood_pack_regions.py  driver.py  e16_lite_w025_metric.json  e16_lite_w075_metric.json  history.py  lanes.py  lanes2.py  mswe_adapter.py  paraphrases.json  region_eval_lanes.py  swebench_driver.py  swebench_driver2.py  swebench_verified_heldout.parquet  swebench_verified_heldout_instances.txt  test_instances.txt
lab/archex_eval/: run_archex_metric.py
lab/contextbench/: README.md  results_python.json  run_contextbench.py
lab/experiments/: packing_v3_survival_scheduled.patch  subset_v3.json
lab/latency/: bench_latency.py  latency_v1.json
lab/paper/: EVAL_PLAN.md
lab/research/: ROADMAP.md  arxiv-ir-theory-2026-07.md  arxiv-se-networks-2026-07.md
lab/results_grepdisc/: celery_task_dispatch.json  click_decorators.json  django_middleware.json  django_orm_queries.json  express_error_handling.json  express_middleware.json  fastapi_dependency_injection.json  fastapi_routing.json  flask_blueprints.json  gin_routing.json  go_gin_middleware.json  httpx_pooling.json  mini_redis_async.json  pydantic_validators.json  pytest_fixtures.json  react_hooks.json  requests_sessions.json  rust_tokio_runtime.json  sqlalchemy_sessions.json
lab/results_para_adversarial/: celery_task_dispatch.json  click_decorators.json  django_middleware.json  django_orm_queries.json  (+15 more)
parity/: bundle_parity.py  bundle_parity_300.json  bundle_parity_report.json  e16_lite_w025.jsonl  e16_lite_w075.jsonl  harness.py  region_eval.py  region_eval2.py  region_eval_full.py  region_eval_verified.py  rust_gate_300_v2.json  rust_gate_300_v3.json  rust_gate_300_v4.json  rust_gate_300_v5.json
roust-rs/: Cargo.toml  PARITY_NOTES.md  build.rs
roust-rs/src/: cache.rs  core.rs  history.rs  lib.rs  main.rs  pyutil.rs
roust-rs/tests/: cli_contract.rs  confidence.rs  history_assoc.rs  incremental.rs
scripts/: check_versions.py  fetch_swebench_full.py  package_binary.py
tests/: _roust_bin.py  test_determinism.py  test_incremental.py  test_paired_stats.py  test_parity.py  test_smoke.py
(+257 files in other folders)
