[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bgrep"
version = "0.1.0"
description = "Recall-first code retrieval for LLM coding agents — grep-level recall at ~1% of the tokens"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.5",
]

[project.scripts]
bgrep = "bgrep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bgrep"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
