[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "roust"
version = "0.2.0"
description = "Recall-first code retrieval for coding agents - one ranked, token-budgeted bundle per query, no model or API key required"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.maturin]
bindings = "bin"
manifest-path = "roust-rs/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
