[package]
name = "roust"
version = "0.2.0"
edition = "2024"
description = "Recall-first code retrieval for coding agents - one ranked, token-budgeted bundle per query, no model or API key required"
license = "MIT"
repository = "https://github.com/narehart/roust"
readme = "../README.md"
keywords = ["grep", "search", "retrieval", "llm", "code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiktoken-rs = "0.6"

[dev-dependencies]
filetime = "0.2.29"
